--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ six==1.16.0
 SQLAlchemy==1.4.31
 dynaconf==3.1.7
 Flask-RESTful>=0.3.8
-SQLAlchemy-serializer==1.3.4.2
+SQLAlchemy-serializer==1.4.1
 python-dotenv==0.19.2
 PyMySQL==1.0.2
 bcrypt==3.2.0
@@ -25,3 +25,4 @@ marshmallow-sqlalchemy==0.28.0
 flask-ldap3-login==0.9.17
 Flask-Login==0.5.0
 flask-cors>=3.0.10
+cryptography==39.0.2
